# max_sender

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
max_sender/: __init__.py  core.py
telegram_sender/: core.py
tests/: e2e_verify.py  test_core.py
