[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "max_sender"
version = "0.1.0"
description = "Asynchronous Python tool for efficiently sending MAX messages, media, and inline keyboards with optional MongoDB logging."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["max", "messenger", "bot", "async", "message", "sender"]

authors = [
  { name="Alexander Smirnov", email="Alex@TheSmirnov.com" },
]

dependencies = [
    "aiohttp>=3,<4",
    "pymongo>=4.6,<5",
    "pydantic>=2,<3"
]

classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/smalyu/max_sender"
"Bug Tracker" = "https://github.com/smalyu/max_sender/issues"
"Source" = "https://github.com/smalyu/max_sender"

[tool.setuptools.packages.find]
include = ["max_sender*"]
